- fixed: mobj Z coordinates were sometimes incorrect on clientside
- fixed: server didn't increase client's bandwidth rating, ever
- fixed: WAD warning box in Client Setup screen was in the wrong place
- fixed: halos weren't always displayed correctly on clientside

drD3D:
+ option -triple: enable triple buffering in fullscreen mode

XG:
- XG should always be disabled on clientside

jDoom:
* Plutonia/TNT will automatically set rend-sky-full
- fixed: bullet puffs in face (bug 740767)
- fixed: main menu item spacing too tight
- fixed: STARMS was used in the status bar when in deathmatch

jHeretic:
+ cvar 'player-jump-power'

jHexen:
+ cvar 'player-jump-power'


Version 1.7.12
--------------
+ option -leaveramp: don't reset color settings back to previous values
  at shutdown
+ JWADs: IWAD supplements (uses normal WAD loading order)
+ Data\Graphics directory: Doomsday's graphics resources (UI textures)
+ cvars 'ui-cursor-width', 'ui-cursor-height': UI mouse cursor size
+ added new cvar controls to the Control Panel (e.g. multitex, HUD mirror)
* the first incarnation of the Doomsday UI theme, "Gradient", was 
  replaced with a much more polished theme, "Plastic"
* UI mouse cursor size and movement depend on display resolution
* music data will not be cached into the memory zone while loading 
  (large MP3s wasted a lot of space) 
* paths that contain the base path are normally printed without the base
- removed obsolete settings from Control Panel
- removed detail texture maximum distance cvar and Control Panel slider
- removed cvars 'rend-light-clip', 'rend-light-shrink'
- fixed: possible crash in Con_Error()

Definitions:
+ DED version 6: semicolons are optional (the default is 6)
+ added Defs/Doomsday.ded: include definitions shared by all games
+ 'Top map', 'Bottom map', 'Side map' added to Light defs and
  Decoration:Light defs (name of lightmap to use; empty means default,
  "-" is none)
+ particle types pt_modelNN: use 3D model ID = "ParticleNN" 